--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
 	"name": "inrtia",
 	"version": "0.1.1",
 	"description": "",
-	"keywords": [],
-	"main": "src/inrtia.js",
-	"bin": {
-		"inrtia": "bin/inrtia.js"
-	},
+  "keywords": [],
+  
+	"main": "bin/inrtia.js",
+  "module": "bin/inrtia.module.js",
+  "jsnext:main": "bin/inrtia.module.js",
+  "unpkg": "bin/inrtia.browser.js",
+  "jsdelivr": "bin/inrtia.browser.js",
+
 	"scripts": {
 		"build": "yarn compile && yarn min  && yarn copy_demo",
 		"compile": "rollup -c",
-		"copy_demo": "cp bin/inrtia.js demo/js/inrtia.js",
+		"copy_demo": "cp bin/inrtia.browser.js demo/js/inrtia.js",
 		"deploy": "ghp demo",
-		"min": "uglifyjs --compress --mangle --output bin/inrtia.min.js -- bin/inrtia.js"
+		"min": "uglifyjs --compress --mangle --output bin/inrtia.browser.min.js -- bin/inrtia.browser.js"
 	},
 	"repository": {
 		"type": "git",
@@ -30,15 +33,15 @@
 		"eslint-config-airbnb-base": "^11.2.0",
 		"eslint-plugin-import": "^2.3.0",
 		"ghp": "^1.1.4",
-		"rollup": "^0.43.0",
+		"rollup": "^0.51.8",
 		"rollup-plugin-babel": "^2.7.1",
 		"rollup-plugin-node-resolve": "^3.0.0",
 		"uglify-js": "^3.0.18"
-  },
-  "dependencies": {
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-latest": "^6.24.1"
-  },
+	},
+	"dependencies": {
+		"babel-plugin-external-helpers": "^6.22.0",
+		"babel-preset-latest": "^6.24.1"
+	},
 	"engines": {
 		"node": ">=6.0.0"
 	}
