--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "inrtia",
-	"version": "0.1.1",
+	"version": "0.1.2",
 	"description": "",
   "keywords": [],
   
@@ -11,11 +11,12 @@
   "jsdelivr": "bin/inrtia.browser.js",
 
 	"scripts": {
-		"build": "yarn compile && yarn min  && yarn copy_demo",
+		"build": "npm run compile && npm run min  && npm run copy_demo",
 		"compile": "rollup -c",
 		"copy_demo": "cp bin/inrtia.browser.js demo/js/inrtia.js",
 		"deploy": "ghp demo",
-		"min": "uglifyjs --compress --mangle --output bin/inrtia.browser.min.js -- bin/inrtia.browser.js"
+    "min": "uglifyjs --compress --mangle --output bin/inrtia.browser.min.js -- bin/inrtia.browser.js",
+    "postversion": "npm run build"
 	},
 	"repository": {
 		"type": "git",
